--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "compile-hero.disable-compile-files-on-did-save-code": true
+   "compile-hero.disable-compile-files-on-did-save-code": true,
+   "editor.formatOnPaste": true,
+   "editor.formatOnSave": true
 }
